# tauri-okthx

./: README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: command.rs  main.rs  window.rs
src/components/: Chat.css  Chat.tsx  ChatInput.tsx  ChatWrapper.tsx  CustomChatInput.tsx  Screenshot.tsx  SnipOverlay.css  SnipOverlay.tsx
src/components/ui/: textareaautosize.tsx
src/hooks/: useEscape.tsx
src/lib/: customFetch.ts
